org.mmisw.ont - Ontology URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-10-22
	- HTML output improved a bit. New class HtmlDispatcher.
	- doPost was calling super.doGet!! (a typo).  Fixed.
	- Sparql "select" response now in HTML.
	
	
2008-10-21
	- Starting handling of metadata vocabularies.
	- New package package org.mmisw.ont.vocabulary:
	     Omv: Vocabulary definitions for Omv
	     OmvMmi: Vocabulary definitions for OmvMmi
	  The definition are based on the current contents of:
	     http://marinemetadata.org/files/mmi/OntologyExampleOMV.owl
	  which I saved in the same package for reference.
	  
	- Dispatching the metadata:
		"_md" parameter used to display the metadata, example:
		     http://mmisw.org/ont/foo/mytopic.owl?_md
		(I added some of the new attributes in mytopic.owl for testing).
	  Main classes:
		MdDispatcher: Dispatches the metadata output
		MdHelper: Handles the metadata attributes.
	
	
2008-10-20
	- MmmUri: fixed getTermUri();  new getTopicExtension().
	
	- First implementation of the current Dereferencing rules, but unfinished.
	- Accept: A helper class to query the "accept" header values.
	- "form" parameter also handled. If given, this parameter takes precedence
	  over the file extension.
	  
	- parameter "info" changed to "_debug"
	
	
	
2008-10-19
	- new convenience annotation @org.mmisw.ont.util.Unfinished
	- sparql stuff moved to package org.mmisw.ont.sparql
	- package-info.java files added
	
	- sparql queries now working
	- "construct" and "select" queries accepted and processed.
	- WebContent/sparql.html - tests page
	
	
2008-10-18  v. 0.1.1 (20081018)
	- General code clean-up (loggers, non "static" classes)
	- New OntConfig to handle configuration parameters; removed hard-coded params.
	
2008-10-17
	- main.css: normal font (instead of x-small)
	- minor logging changes
	
	
2008-10-16
	- Preliminaries for resolving terms
	
	- Process xslt for output of sparql query (with xslt parameter)