@@ -84,15 +84,17 @@ public class SparqlDispatcher {
 				response.setContentType("Application/rdf+xml");
 			}
 		}
+		
 		else if ( "text/html".equals(queryResult.getContentType()) ) {
 			String pre = "<html><head><title>Query result</title>" +
 			             "<link rel=stylesheet href=\"" +
 			                  request.getContextPath()+ "/main.css\" type=\"text/css\">" +
 			             "</head><body>\n";
-			pre += "\n<!-- Query:\n" +query+ "\n-->\n\n";
+			pre += "\n<!-- Query:\n" +Util.toHtmlComment(query)+ "\n-->\n\n";
 			result = pre + result + "</body></html>";
 			response.setContentType(queryResult.getContentType());
 		}
+		
 		else {
 			response.setContentType(queryResult.getContentType());
 		}
